# epp-sessions-6

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: pytaskepp.tex  pytaskepp_pres.tex  task_paper.py
src/pytaskepp/: __init__.py
src/pytaskepp/analysis/: task_analysis.py
src/pytaskepp/data_management/: __init__.py  task_clean_alesina_data.py  task_clean_election_data.py  task_data_management.py  task_merge_data.py
src/pytaskepp/final/: __init__.py  task_create_scatterplots.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
