[metadata]
name = pytaskepp
description = Effects of PyTasks Usage among Young Economists: Evidence from BSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giacomobattiston/pytaskepp
author = Giacomo, Franziska, Paula, Thomas
author_email = gcm.battiston@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/giacomobattiston/pytaskepp
    Documentation = https://github.com/giacomobattiston/pytaskepp
    Github = https://github.com/giacomobattiston/pytaskepp
    Tracker = https://github.com/giacomobattiston/pytaskepp/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/pytaskepp/_version.py
